syntax = "proto3";

option java_package = "emu.lunarcore.proto";

enum CmdChallengeType {
	CmdChallengeTypeNone = 0;
	CmdStartChallengeCsReq = 1758;
	CmdChallengeBossPhaseSettleNotify = 1748;
	CmdLeaveChallengeScRsp = 1756;
	CmdStartPartialChallengeScRsp = 1712;
	CmdStartChallengeScRsp = 1724;
	CmdGetChallengeGroupStatisticsCsReq = 1739;
	CmdRestartChallengePhaseCsReq = 1791;
	CmdRestartChallengePhaseScRsp = 1718;
	CmdTakeChallengeRewardScRsp = 1780;
	CmdGetCurChallengeCsReq = 1711;
	CmdGetCurChallengeScRsp = 1705;
	CmdChallengeLineupNotify = 1714;
	CmdLeaveChallengeCsReq = 1730;
	CmdGetChallengeCsReq = 1701;
	CmdGetChallengeGroupStatisticsScRsp = 1796;
	CmdChallengeSettleNotify = 1797;
	CmdTakeChallengeRewardCsReq = 1747;
	CmdStartPartialChallengeCsReq = 1723;
	CmdGetChallengeScRsp = 1768;
	CmdEnterChallengeNextPhaseScRsp = 1750;
	CmdEnterChallengeNextPhaseCsReq = 1795;
}

