syntax = "proto3";

option java_package = "emu.lunarcore.proto";

enum CmdPlayerSync {
	CmdPlayerSyncNone = 0;
	CmdPlayerSyncScNotify = 601;
}

