syntax = "proto3";

option java_package = "emu.lunarcore.proto";

enum CmdStrongChallengeActivityType {
	CmdStrongChallengeActivityTypeNone = 0;
	CmdEnterStrongChallengeActivityStageCsReq = 6658;
	CmdEnterStrongChallengeActivityStageScRsp = 6624;
	CmdGetStrongChallengeActivityDataCsReq = 6601;
	CmdGetStrongChallengeActivityDataScRsp = 6668;
	CmdStrongChallengeActivityBattleEndScNotify = 6630;
}

